Objet grenade et corriger un bug dans le moteur physique

--- a/ShootToThrill/ShootToThrill/ShootToThrill.csproj
+++ b/ShootToThrill/ShootToThrill/ShootToThrill.csproj
@@ -171,6 +171,7 @@
     <Compile Include="SystèmePhysique\InformationIntersection.cs" />
     <Compile Include="SystèmePhysique\MMoteurPhysique.cs" />
     <Compile Include="SystèmePhysique\MoteurPhysique.cs" />
+    <Compile Include="Système Entité\Grenade.cs" />
     <Compile Include="SystèmePhysique\ObjetsPhysique\MCubePhysique.cs" />
     <Compile Include="SystèmePhysique\ObjetsPhysique\MCubePhysiqueMobile.cs" />
     <Compile Include="SystèmePhysique\ObjetsPhysique\ModelPhysique.cs" />
