--- a/ShootToThrill/ShootToThrill/ShootToThrill.csproj
+++ b/ShootToThrill/ShootToThrill/ShootToThrill.csproj
@@ -141,18 +141,17 @@
     <Compile Include="Système Entité\Entités\MAvatar.cs" />
     <Compile Include="Système Entité\Entités\MJoueur.cs" />
     <Compile Include="Système Entité\Item\DroiteColorée.cs" />
-    <Compile Include="Système Entité\Item\Fusil.cs" />
-    <Compile Include="Système Entité\Item\Shotgun.cs" />
-    <Compile Include="Système Entité\Item\Railgun.cs" />
-    <Compile Include="Système Entité\Item\Machinegun.cs" />
-    <Compile Include="Système Entité\Item\Pistol.cs" />
+    <Compile Include="Système Entité\Item\Fusil\Fusil.cs" />
+    <Compile Include="Système Entité\Item\Fusil\Shotgun.cs" />
+    <Compile Include="Système Entité\Item\Fusil\Railgun.cs" />
+    <Compile Include="Système Entité\Item\Fusil\Machinegun.cs" />
+    <Compile Include="Système Entité\Item\Fusil\Pistol.cs" />
     <Compile Include="Système Entité\Item\Interrupteur.cs" />
     <Compile Include="Système Entité\Item\Item.cs" />
-    <Compile Include="Système Entité\Item\Munition.cs" />
+    <Compile Include="Système Entité\Item\Fusil\Munition.cs" />
     <Compile Include="Système Entité\Item\Portail.cs" />
     <Compile Include="Système Entité\Item\RandomItemDrop.cs" />
     <Compile Include="Système Entité\Item\Soin.cs" />
-    <Compile Include="Système Entité\Item\SupportFusil.cs" />
     <Compile Include="Système Graphique\BetterSkinned\AnimatedModel.cs" />
     <Compile Include="Système Graphique\BetterSkinned\AnimationPlayer.cs" />
     <Compile Include="Système Graphique\BetterSkinned\Bone.cs" />
