Correction chemin relatif et bug moteur physique

--- a/ShootToThrill/ShootToThrill/ShootToThrill.csproj
+++ b/ShootToThrill/ShootToThrill/ShootToThrill.csproj
@@ -174,9 +174,9 @@
     <Compile Include="SystèmePhysique\CubeDeForces\VolumeDeForce.cs" />
     <Compile Include="SystèmePhysique\CubeDeForces\CubeDeForce.cs" />
     <Compile Include="SystèmePhysique\InformationIntersection.cs" />
-    <Compile Include="SystèmePhysique\MMoteurPhysique.cs" />
-    <Compile Include="SystèmePhysique\MoteurPhysique.cs" />
+    <Compile Include="SystèmePhysique\IMoteurPhysique.cs" />
     <Compile Include="Système Entité\Grenade.cs" />
+    <Compile Include="SystèmePhysique\MoteurPhysique.cs" />
     <Compile Include="SystèmePhysique\ObjetsPhysique\MCubePhysique.cs" />
     <Compile Include="SystèmePhysique\ObjetsPhysique\MCubePhysiqueMobile.cs" />
     <Compile Include="SystèmePhysique\ObjetsPhysique\ModelPhysique.cs" />
