Cubes + gestion projectile
Les cubes texturés n'ont plus besoin de rasterize state. La gestion est
différente, celle-ci ne nécessite pas d'arme à la construction.

--- a/ShootToThrill/ShootToThrill/ShootToThrill.csproj
+++ b/ShootToThrill/ShootToThrill/ShootToThrill.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Système Entité\Item\Item.cs" />
     <Compile Include="Système Entité\Item\Fusil\Munition.cs" />
     <Compile Include="Système Entité\Item\Portail.cs" />
+    <Compile Include="Système Entité\Item\Projectile\Éclair.cs" />
     <Compile Include="Système Entité\Item\RandomItemDrop.cs" />
     <Compile Include="Système Entité\Item\Soin.cs" />
     <Compile Include="Système Graphique\ModelManager.cs" />
