--- a/ShootToThrill/ShootToThrill/ShootToThrill.csproj
+++ b/ShootToThrill/ShootToThrill/ShootToThrill.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Système Entité\Item\Portail.cs" />
     <Compile Include="Système Entité\Item\RandomItemDrop.cs" />
     <Compile Include="Système Entité\Item\Soin.cs" />
+    <Compile Include="Système Graphique\CubeÉclairé.cs" />
     <Compile Include="Système Graphique\ModelManager.cs" />
     <Compile Include="Système Graphique\ObjetDeBase.cs" />
     <Compile Include="Système Graphique\PrimitiveDeBase2.cs" />
@@ -183,10 +184,10 @@
     <Compile Include="SystèmePhysique\ObjetsPhysique\ObjetPhysique.cs" />
     <Compile Include="SystèmePhysique\ObjetsPhysique\ObjetPhysiqueGraphique.cs" />
     <Compile Include="Système Graphique\PrimitiveDeBaseAnimée2.cs" />
-    <Compile Include="SystèmePhysique\Terrain\CarréColoré.cs" />
+    <Compile Include="Système Graphique\CarréColoré.cs" />
     <Compile Include="SystèmePhysique\Terrain\CubeAdditionnable.cs" />
-    <Compile Include="SystèmePhysique\Terrain\CubeColoré .cs" />
-    <Compile Include="SystèmePhysique\Terrain\CubeTexturé.cs" />
+    <Compile Include="Système Graphique\CubeColoré .cs" />
+    <Compile Include="Système Graphique\CubeTexturé.cs" />
     <Compile Include="SystèmePhysique\Terrain\Pente.cs" />
     <Compile Include="SystèmePhysique\Terrain\PrimitivePente.cs" />
     <Compile Include="SystèmePhysique\Terrain\Projectiles.cs" />
