--- a/ShootToThrill/ShootToThrill/ShootToThrill.csproj
+++ b/ShootToThrill/ShootToThrill/ShootToThrill.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Système Entité\Entités\MJoueur.cs" />
     <Compile Include="Système Entité\Item\DroiteColorée.cs" />
     <Compile Include="Système Entité\Item\Fusil\Fusil.cs" />
+    <Compile Include="Système Entité\Item\Fusil\Lasergun.cs" />
     <Compile Include="Système Entité\Item\Fusil\Shotgun.cs" />
     <Compile Include="Système Entité\Item\Fusil\Railgun.cs" />
     <Compile Include="Système Entité\Item\Fusil\Machinegun.cs" />
@@ -150,6 +151,7 @@
     <Compile Include="Système Entité\Item\Fusil\Munition.cs" />
     <Compile Include="Système Entité\Item\Portail.cs" />
     <Compile Include="Système Entité\Item\Projectiles\Balle.cs" />
+    <Compile Include="Système Entité\Item\Projectiles\Laser.cs" />
     <Compile Include="Système Entité\Item\Projectiles\Éclair.cs" />
     <Compile Include="Système Entité\Item\RandomItemDrop.cs" />
     <Compile Include="Système Entité\Item\Soin.cs" />
