--- a/ShootToThrill/ShootToThrill/ShootToThrill.csproj
+++ b/ShootToThrill/ShootToThrill/ShootToThrill.csproj
@@ -152,22 +152,22 @@
     <Compile Include="Système Entité\Entités\MAvatar.cs" />
     <Compile Include="Système Entité\Entités\MEnnemi.cs" />
     <Compile Include="Système Entité\Entités\MJoueur.cs" />
-    <Compile Include="Système Entité\Item\Fusil\Fusil.cs" />
-    <Compile Include="Système Entité\Item\Fusil\Lasergun.cs" />
-    <Compile Include="Système Entité\Item\Fusil\Shotgun.cs" />
-    <Compile Include="Système Entité\Item\Fusil\Railgun.cs" />
-    <Compile Include="Système Entité\Item\Fusil\Machinegun.cs" />
-    <Compile Include="Système Entité\Item\Fusil\Pistol.cs" />
-    <Compile Include="Système Entité\Item\Fusil\Teslagun.cs" />
-    <Compile Include="Système Entité\Item\Interrupteur.cs" />
-    <Compile Include="Système Entité\Item\Item.cs" />
-    <Compile Include="Système Entité\Item\Fusil\Munition.cs" />
-    <Compile Include="Système Entité\Item\Portail.cs" />
-    <Compile Include="Système Entité\Item\Projectiles\Balle.cs" />
-    <Compile Include="Système Entité\Item\Projectiles\Laser.cs" />
-    <Compile Include="Système Entité\Item\Projectiles\Éclair.cs" />
-    <Compile Include="Système Entité\Item\RandomItemDrop.cs" />
-    <Compile Include="Système Entité\Item\Soin.cs" />
+    <Compile Include="Système Entité\Items\Fusil\Fusil.cs" />
+    <Compile Include="Système Entité\Items\Fusil\Lasergun.cs" />
+    <Compile Include="Système Entité\Items\Fusil\Machinegun.cs" />
+    <Compile Include="Système Entité\Items\Fusil\Munition.cs" />
+    <Compile Include="Système Entité\Items\Fusil\Pistol.cs" />
+    <Compile Include="Système Entité\Items\Fusil\Railgun.cs" />
+    <Compile Include="Système Entité\Items\Fusil\Shotgun.cs" />
+    <Compile Include="Système Entité\Items\Fusil\Teslagun.cs" />
+    <Compile Include="Système Entité\Items\Interrupteur.cs" />
+    <Compile Include="Système Entité\Items\Item.cs" />
+    <Compile Include="Système Entité\Items\Portail.cs" />
+    <Compile Include="Système Entité\Items\Projectiles\Balle.cs" />
+    <Compile Include="Système Entité\Items\Projectiles\Laser.cs" />
+    <Compile Include="Système Entité\Items\Projectiles\Éclair.cs" />
+    <Compile Include="Système Entité\Items\RandomItemDrop.cs" />
+    <Compile Include="Système Entité\Items\Soin.cs" />
     <Compile Include="Système Graphique\BillboardColoréTracing.cs" />
     <Compile Include="Système Graphique\CubeÉclairé.cs" />
     <Compile Include="Système Graphique\DroiteColorée.cs" />
@@ -205,6 +205,7 @@
     <Compile Include="SystèmePhysique\ObjetsPhysique\ObjetPhysiqueGraphique.cs" />
     <Compile Include="Système Graphique\PrimitiveDeBaseAnimée2.cs" />
     <Compile Include="Système Graphique\CarréColoré.cs" />
+    <Compile Include="SystèmePhysique\ObjetsPhysique\ÉtatPhysique.cs" />
     <Compile Include="SystèmePhysique\Terrain\CubeAdditionnable.cs" />
     <Compile Include="Système Graphique\CubeColoré .cs" />
     <Compile Include="Système Graphique\CubeTexturé.cs" />
