--- a/ShootToThrill/ShootToThrill/ShootToThrill.csproj
+++ b/ShootToThrill/ShootToThrill/ShootToThrill.csproj
@@ -123,6 +123,7 @@
     <Compile Include="InformationGame.cs" />
     <Compile Include="Interfaces\GameState.cs" />
     <Compile Include="Interfaces\IArme.cs" />
+    <Compile Include="Interfaces\IFaitMal.cs" />
     <Compile Include="Interfaces\IHeapObjet.cs" />
     <Compile Include="Interfaces\IModele3d.cs" />
     <Compile Include="Interfaces\IPausable.cs" />
@@ -168,6 +169,7 @@
     <Compile Include="Système Entité\Items\Projectiles\Éclair.cs" />
     <Compile Include="Système Entité\Items\RandomItemDrop.cs" />
     <Compile Include="Système Entité\Items\Soin.cs" />
+    <Compile Include="Système Entité\TacheAcide.cs" />
     <Compile Include="Système Graphique\BillboardColoréTracing.cs" />
     <Compile Include="Système Graphique\CubeÉclairé.cs" />
     <Compile Include="Système Graphique\DroiteColorée.cs" />
@@ -186,6 +188,8 @@
     <Compile Include="Système Graphique\Billboard.cs" />
     <Compile Include="Système Graphique\Shaders\SphèreDeBase.cs" />
     <Compile Include="Système Graphique\Shaders\SphèreÉclairée.cs" />
+    <Compile Include="Système Graphique\Tuile.cs" />
+    <Compile Include="Système Graphique\TuileTexturée.cs" />
     <Compile Include="SystèmePhysique\Colliders\Collider.cs" />
     <Compile Include="SystèmePhysique\Colliders\DroiteCollision.cs" />
     <Compile Include="SystèmePhysique\Colliders\MCubeCollision.cs" />
